rtg_tests/negative/assignment_target/go.mod
module example.com/rtgtests/negative/assignment_target

go 1.25
